--- a/food-preview/assignment.html
+++ b/food-preview/assignment.html
@@ -21,9 +21,9 @@
   <img src="images/food1.jpg">
   
   </div>
-  
-</section class= "top banner flexible-container">
-<section>
+  </section>
+<section class= "top banner flexible-container">
+
   <div> 
   <img src="images/food2.bg.jpg">
   
@@ -41,10 +41,27 @@
 <h5><p> Tomato carot ladies finger cucumber oninon breet popcorn</p></h5>
 <h5><p> peanut apple orange are also available here</p></h5>
 
-<section class="shak">
+<section class="top banner flexible-container">
+<div>
+<p>Tittle</p>
+Good For bone 
+</div>
+<div>
+<p>Tittle</p>
+Good for muscle
+</div>
+<div>
+<p>Tittle</p>
+Good for Teeth
+</div>
 <div class="flexible-container">
 <div id="shak1" class="stock shak">
 <h4><span class="blue-color">Food </span>Preview</h4>
+
+<footer>
+Stay healthy live healthy live happily
+</footer>
+
 
 </body>
 
